# hdvrescue

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: hdv-internals.md  plan-format.md  report-format.md
src/hdvrescue/: __init__.py  aux.py  build.py  cli.py  dedup.py  model.py  plan.py  planreport.py  psi.py  recover.py  scan.py  timecal.py  ts.py  verify.py
tests/: fixtures.py  test_build.py  test_dedup.py  test_e2e.py  test_plan.py  test_primitives.py  test_report.py  test_scan.py
